bin_PROGRAMS = scorched3ds

scorched3ds_SOURCES = \
	../actions/AddTarget.cpp \
	../actions/AddTarget.h \
	../actions/Animation.cpp \
	../actions/Animation.h \
	../actions/CallbackWeapon.cpp \
	../actions/CallbackWeapon.h \
	../actions/CameraPositionAction.cpp \
	../actions/CameraPositionAction.h \
	../actions/Explosion.cpp \
	../actions/Explosion.h \
	../actions/Laser.cpp \
	../actions/Laser.h \
	../actions/Lightning.cpp \
	../actions/Lightning.h \
	../actions/Napalm.cpp \
	../actions/Napalm.h \
	../actions/Resurrection.cpp \
	../actions/Resurrection.h \
	../actions/ShieldHit.cpp \
	../actions/ShieldHit.h \
	../actions/ShotBounce.cpp \
	../actions/ShotBounce.h \
	../actions/ShotProjectile.cpp \
	../actions/ShotProjectile.h \
	../actions/SkyFlash.cpp \
	../actions/SkyFlash.h \
	../actions/SoundAction.cpp \
	../actions/SoundAction.h \
	../actions/TankDamage.cpp \
	../actions/TankDamage.h \
	../actions/TankFalling.cpp \
	../actions/TankFalling.h \
	../actions/TankFired.cpp \
	../actions/TankFired.h \
	../actions/TankMovement.cpp \
	../actions/TankMovement.h \
	../actions/TankResign.cpp \
	../actions/TankResign.h \
	../actions/TankSay.cpp \
	../actions/TankSay.h \
	../actions/Teleport.cpp \
	../actions/Teleport.h \
	./main.cpp \
	../common/ARGParser.cpp \
	../common/ARGParser.h \
	../common/ChannelManager.cpp \
	../common/ChannelManager.h \
	../common/ChannelText.cpp \
	../common/ChannelText.h \
	../common/Clock.cpp \
	../common/Clock.h \
	../common/Counter.cpp \
	../common/Counter.h \
	../common/Defines.cpp \
	../common/Defines.h \
	../common/DefinesAssert.cpp \
	../common/DefinesAssert.h \
	../common/DefinesFile.cpp \
	../common/DefinesFile.h \
	../common/DefinesMath.cpp \
	../common/DefinesMath.h \
	../common/DefinesScorched.cpp \
	../common/DefinesScorched.h \
	../common/DefinesString.cpp \
	../common/DefinesString.h \
	../common/FileLines.cpp \
	../common/FileLines.h \
	../common/FileList.cpp \
	../common/FileList.h \
	../common/FileLogger.cpp \
	../common/FileLogger.h \
	../common/ImageID.cpp \
	../common/ImageID.h \
	../common/Keyboard.cpp \
	../common/Keyboard.h \
	../common/KeyboardHistory.h \
	../common/KeyboardKey.cpp \
	../common/KeyboardKey.h \
	../common/KeyStateTranslate.h \
	../common/KeyTranslate.h \
	../common/Line.cpp \
	../common/Line.h \
	../common/Logger.cpp \
	../common/Logger.h \
	../common/LoggerI.cpp \
	../common/LoggerI.h \
	../common/ModelID.cpp \
	../common/ModelID.h \
	../common/NumberParser.cpp \
	../common/NumberParser.h \
	../common/OptionEntry.cpp \
	../common/OptionEntry.h \
	../common/OptionsGame.cpp \
	../common/OptionsGame.h \
	../common/OptionsMasterListServer.cpp \
	../common/OptionsMasterListServer.h \
	../common/OptionsParameters.cpp \
	../common/OptionsParameters.h \
	../common/OptionsScorched.cpp \
	../common/OptionsScorched.h \
	../common/OptionsTransient.cpp \
	../common/OptionsTransient.h \
	../common/ProgressCounter.cpp \
	../common/ProgressCounter.h \
	../common/RandomGenerator.cpp \
	../common/RandomGenerator.h \
	../common/snprintf.c \
	../common/SplineCurve.cpp \
	../common/SplineCurve.h \
	../common/SplinePath.cpp \
	../common/SplinePath.h \
	../common/StatsLogger.cpp \
	../common/StatsLogger.h \
	../common/StatsLoggerDatabase.cpp \
	../common/StatsLoggerDatabase.h \
	../common/StatsLoggerFile.cpp \
	../common/StatsLoggerFile.h \
	../common/StatsLoggerMySQL.cpp \
	../common/StatsLoggerMySQL.h \
	../common/ToolTip.cpp \
	../common/ToolTip.h \
	../common/Triangle.cpp \
	../common/Triangle.h \
	../common/Vector.cpp \
	../common/Vector.h \
	../common/Vector4.cpp \
	../common/Vector4.h \
	../common/VectorLib.cpp \
	../common/VectorLib.h \
	../server/ScorchedServer.cpp \
	../server/ScorchedServer.h \
	../server/ScorchedServerUtil.cpp \
	../server/ScorchedServerUtil.h \
	../server/ServerAddPlayerHandler.cpp \
	../server/ServerAddPlayerHandler.h \
	../server/ServerAdminHandler.cpp \
	../server/ServerAdminHandler.h \
	../server/ServerAuthHandler.cpp \
	../server/ServerAuthHandler.h \
	../server/ServerAuthHandlerForumLogin.cpp \
	../server/ServerAuthHandlerForumLogin.h \
	../server/ServerAuthHandlerMinKills.cpp \
	../server/ServerAuthHandlerMinKills.h \
	../server/ServerAuthHandlerPrefered.cpp \
	../server/ServerAuthHandlerPrefered.h \
	../server/ServerBanned.cpp \
	../server/ServerBanned.h \
	../server/ServerBrowserInfo.cpp \
	../server/ServerBrowserInfo.h \
	../server/ServerBuyAccessoryHandler.cpp \
	../server/ServerBuyAccessoryHandler.h \
	../server/ServerChannelAuth.cpp \
	../server/ServerChannelAuth.h \
	../server/ServerChannelFilter.cpp \
	../server/ServerChannelFilter.h \
	../server/ServerChannelManager.cpp \
	../server/ServerChannelManager.h \
	../server/ServerCommon.cpp \
	../server/ServerCommon.h \
	../server/ServerConnectHandler.cpp \
	../server/ServerConnectHandler.h \
	../server/ServerDefenseHandler.cpp \
	../server/ServerDefenseHandler.h \
	../server/ServerFileAkHandler.cpp \
	../server/ServerFileAkHandler.h \
	../server/ServerFileServer.cpp \
	../server/ServerFileServer.h \
	../server/ServerGiftMoneyHandler.cpp \
	../server/ServerGiftMoneyHandler.h \
	../server/ServerHaveModFilesHandler.cpp \
	../server/ServerHaveModFilesHandler.h \
	../server/ServerInitializeHandler.cpp \
	../server/ServerInitializeHandler.h \
	../server/ServerKeepAliveHandler.cpp \
	../server/ServerKeepAliveHandler.h \
	../server/ServerLinesHandler.cpp \
	../server/ServerLinesHandler.h \
	../server/ServerLog.cpp \
	../server/ServerLog.h \
	../server/ServerMain.cpp \
	../server/ServerMain.h \
	../server/ServerMessageHandler.cpp \
	../server/ServerMessageHandler.h \
	../server/ServerNewGameState.cpp \
	../server/ServerNewGameState.h \
	../server/ServerNextRoundState.cpp \
	../server/ServerNextRoundState.h \
	../server/ServerNextShotState.cpp \
	../server/ServerNextShotState.h \
	../server/ServerNextTurnState.cpp \
	../server/ServerNextTurnState.h \
	../server/ServerParams.cpp \
	../server/ServerParams.h \
	../server/ServerPlayedMoveHandler.cpp \
	../server/ServerPlayedMoveHandler.h \
	../server/ServerPlayerAimHandler.cpp \
	../server/ServerPlayerAimHandler.h \
	../server/ServerPlayerReadyHandler.cpp \
	../server/ServerPlayerReadyHandler.h \
	../server/ServerPlayingState.cpp \
	../server/ServerPlayingState.h \
	../server/ServerReadyState.cpp \
	../server/ServerReadyState.h \
	../server/ServerRegistration.cpp \
	../server/ServerRegistration.h \
	../server/ServerResetState.cpp \
	../server/ServerResetState.h \
	../server/ServerShotFinishedState.cpp \
	../server/ServerShotFinishedState.h \
	../server/ServerShotHolder.cpp \
	../server/ServerShotHolder.h \
	../server/ServerShotState.cpp \
	../server/ServerShotState.h \
	../server/ServerStartingState.cpp \
	../server/ServerStartingState.h \
	../server/ServerState.cpp \
	../server/ServerState.h \
	../server/ServerStateTooFewPlayersState.cpp \
	../server/ServerStateTooFewPlayersState.h \
	../server/ServerTextFilter.cpp \
	../server/ServerTextFilter.h \
	../server/ServerTimedMessage.cpp \
	../server/ServerTimedMessage.h \
	../server/ServerTooFewPlayersStimulus.cpp \
	../server/ServerTooFewPlayersStimulus.h \
	../server/ServerWebAppletHandler.cpp \
	../server/ServerWebAppletHandler.h \
	../server/ServerWebHandler.cpp \
	../server/ServerWebHandler.h \
	../server/ServerWebServer.cpp \
	../server/ServerWebServer.h \
	../server/ServerWebSettingsHandler.cpp \
	../server/ServerWebSettingsHandler.h \
	../server/TurnController.cpp \
	../server/TurnController.h \
	../coms/ComsAddPlayerMessage.cpp \
	../coms/ComsAddPlayerMessage.h \
	../coms/ComsAdminMessage.cpp \
	../coms/ComsAdminMessage.h \
	../coms/ComsBuyAccessoryMessage.cpp \
	../coms/ComsBuyAccessoryMessage.h \
	../coms/ComsChannelMessage.cpp \
	../coms/ComsChannelMessage.h \
	../coms/ComsChannelTextMessage.cpp \
	../coms/ComsChannelTextMessage.h \
	../coms/ComsConnectAcceptMessage.cpp \
	../coms/ComsConnectAcceptMessage.h \
	../coms/ComsConnectMessage.cpp \
	../coms/ComsConnectMessage.h \
	../coms/ComsConnectRejectMessage.cpp \
	../coms/ComsConnectRejectMessage.h \
	../coms/ComsDefenseMessage.cpp \
	../coms/ComsDefenseMessage.h \
	../coms/ComsFileAkMessage.cpp \
	../coms/ComsFileAkMessage.h \
	../coms/ComsFileMessage.cpp \
	../coms/ComsFileMessage.h \
	../coms/ComsGameStateMessage.cpp \
	../coms/ComsGameStateMessage.h \
	../coms/ComsGameStoppedMessage.cpp \
	../coms/ComsGameStoppedMessage.h \
	../coms/ComsGiftMoneyMessage.cpp \
	../coms/ComsGiftMoneyMessage.h \
	../coms/ComsHaveModFilesMessage.cpp \
	../coms/ComsHaveModFilesMessage.h \
	../coms/ComsHeightMapMessage.cpp \
	../coms/ComsHeightMapMessage.h \
	../coms/ComsInitializeMessage.cpp \
	../coms/ComsInitializeMessage.h \
	../coms/ComsKeepAliveMessage.cpp \
	../coms/ComsKeepAliveMessage.h \
	../coms/ComsLevelMessage.cpp \
	../coms/ComsLevelMessage.h \
	../coms/ComsLinesMessage.cpp \
	../coms/ComsLinesMessage.h \
	../coms/ComsMessage.cpp \
	../coms/ComsMessage.h \
	../coms/ComsMessageHandler.cpp \
	../coms/ComsMessageHandler.h \
	../coms/ComsMessageSender.cpp \
	../coms/ComsMessageSender.h \
	../coms/ComsNewGameMessage.cpp \
	../coms/ComsNewGameMessage.h \
	../coms/ComsPlayedMoveMessage.cpp \
	../coms/ComsPlayedMoveMessage.h \
	../coms/ComsPlayerAimMessage.cpp \
	../coms/ComsPlayerAimMessage.h \
	../coms/ComsPlayerReadyMessage.cpp \
	../coms/ComsPlayerReadyMessage.h \
	../coms/ComsPlayerStateMessage.cpp \
	../coms/ComsPlayerStateMessage.h \
	../coms/ComsPlayerStatusMessage.cpp \
	../coms/ComsPlayerStatusMessage.h \
	../coms/ComsPlayMovesMessage.cpp \
	../coms/ComsPlayMovesMessage.h \
	../coms/ComsRmPlayerMessage.cpp \
	../coms/ComsRmPlayerMessage.h \
	../coms/ComsScoreMessage.cpp \
	../coms/ComsScoreMessage.h \
	../coms/ComsStartGameMessage.cpp \
	../coms/ComsStartGameMessage.h \
	../coms/ComsSyncCheckMessage.cpp \
	../coms/ComsSyncCheckMessage.h \
	../coms/ComsTargetStateMessage.cpp \
	../coms/ComsTargetStateMessage.h \
	../coms/ComsTimerStartMessage.cpp \
	../coms/ComsTimerStartMessage.h \
	../net/NetBuffer.cpp \
	../net/NetBuffer.h \
	../net/NetBufferUtil.cpp \
	../net/NetBufferUtil.h \
	../net/NetInterface.cpp \
	../net/NetInterface.h \
	../net/NetInterfaceFlags.h \
	../net/NetLoopBack.cpp \
	../net/NetLoopBack.h \
	../net/NetMessage.cpp \
	../net/NetMessage.h \
	../net/NetMessageHandler.cpp \
	../net/NetMessageHandler.h \
	../net/NetMessagePool.cpp \
	../net/NetMessagePool.h \
	../net/NetServerTCP.cpp \
	../net/NetServerTCP.h \
	../net/NetServerTCPProtocol.cpp \
	../net/NetServerTCPProtocol.h \
	../net/NetServerTCPRead.cpp \
	../net/NetServerTCPRead.h \
	../net/NetServerUDP.cpp \
	../net/NetServerUDP.h \
	../net/NetServerUDPDestination.cpp \
	../net/NetServerUDPDestination.h \
	../XML/ascii.h \
	../XML/asciitab.h \
	../XML/expat.h \
	../XML/expat_config.h \
	../XML/iasciitab.h \
	../XML/internal.h \
	../XML/latin1tab.h \
	../XML/nametab.h \
	../XML/utf8tab.h \
	../XML/winconfig.h \
	../XML/XMLFile.cpp \
	../XML/XMLFile.h \
	../XML/XMLNode.cpp \
	../XML/XMLNode.h \
	../XML/xmlparse.c \
	../XML/XMLParser.cpp \
	../XML/XMLParser.h \
	../XML/xmlrole.c \
	../XML/xmlrole.h \
	../XML/XMLStringBuffer.cpp \
	../XML/XMLStringBuffer.h \
	../XML/xmltok.c \
	../XML/xmltok.h \
	../engine/Action.cpp \
	../engine/Action.h \
	../engine/ActionController.cpp \
	../engine/ActionController.h \
	../engine/ActionReferenced.cpp \
	../engine/ActionReferenced.h \
	../engine/EventContainer.cpp \
	../engine/EventContainer.h \
	../engine/GameState.cpp \
	../engine/GameState.h \
	../engine/GameStateI.cpp \
	../engine/GameStateI.h \
	../engine/GameStateStimulusI.cpp \
	../engine/GameStateStimulusI.h \
	../engine/MainLoop.cpp \
	../engine/MainLoop.h \
	../engine/MainLoopI.cpp \
	../engine/MainLoopI.h \
	../engine/MetaClass.cpp \
	../engine/MetaClass.h \
	../engine/ModDirs.cpp \
	../engine/ModDirs.h \
	../engine/ModFileEntry.cpp \
	../engine/ModFileEntry.h \
	../engine/ModFiles.cpp \
	../engine/ModFiles.h \
	../engine/ModInfo.cpp \
	../engine/ModInfo.h \
	../engine/PhysicsParticle.cpp \
	../engine/PhysicsParticle.h \
	../engine/PhysicsParticleObject.cpp \
	../engine/PhysicsParticleObject.h \
	../engine/PlayShots.cpp \
	../engine/PlayShots.h \
	../engine/ScorchedCollisionIds.cpp \
	../engine/ScorchedCollisionIds.h \
	../engine/ScorchedContext.cpp \
	../engine/ScorchedContext.h \
	../engine/ShotState.cpp \
	../engine/ShotState.h \
	../engine/ViewPoints.cpp \
	../engine/ViewPoints.h \
	../landscapedef/LandscapeDefinition.cpp \
	../landscapedef/LandscapeDefinition.h \
	../landscapedef/LandscapeDefinitionCache.cpp \
	../landscapedef/LandscapeDefinitionCache.h \
	../landscapedef/LandscapeDefinitions.cpp \
	../landscapedef/LandscapeDefinitions.h \
	../landscapedef/LandscapeDefinitionsBase.cpp \
	../landscapedef/LandscapeDefinitionsBase.h \
	../landscapedef/LandscapeDefinitionsItem.h \
	../landscapedef/LandscapeDefn.cpp \
	../landscapedef/LandscapeDefn.h \
	../landscapedef/LandscapeEvents.cpp \
	../landscapedef/LandscapeEvents.h \
	../landscapedef/LandscapeInclude.cpp \
	../landscapedef/LandscapeInclude.h \
	../landscapedef/LandscapeMovement.cpp \
	../landscapedef/LandscapeMovement.h \
	../landscapedef/LandscapeMusic.cpp \
	../landscapedef/LandscapeMusic.h \
	../landscapedef/LandscapeOptions.cpp \
	../landscapedef/LandscapeOptions.h \
	../landscapedef/LandscapeSound.cpp \
	../landscapedef/LandscapeSound.h \
	../landscapedef/LandscapeTex.cpp \
	../landscapedef/LandscapeTex.h \
	../landscapedef/LandscapeTexDefn.cpp \
	../landscapedef/LandscapeTexDefn.h \
	../placement/PlacementGroupDefinition.cpp \
	../placement/PlacementGroupDefinition.h \
	../placement/PlacementObject.cpp \
	../placement/PlacementObject.h \
	../placement/PlacementObjectGroup.cpp \
	../placement/PlacementObjectGroup.h \
	../placement/PlacementObjectHeight.cpp \
	../placement/PlacementObjectHeight.h \
	../placement/PlacementObjectNone.cpp \
	../placement/PlacementObjectNone.h \
	../placement/PlacementObjectRandom.cpp \
	../placement/PlacementObjectRandom.h \
	../placement/PlacementObjectShadow.cpp \
	../placement/PlacementObjectShadow.h \
	../placement/PlacementObjectTank.cpp \
	../placement/PlacementObjectTank.h \
	../placement/PlacementObjectTarget.cpp \
	../placement/PlacementObjectTarget.h \
	../placement/PlacementShadowDefinition.cpp \
	../placement/PlacementShadowDefinition.h \
	../placement/PlacementTankPosition.cpp \
	../placement/PlacementTankPosition.h \
	../placement/PlacementType.cpp \
	../placement/PlacementType.h \
	../placement/PlacementTypeBounds.cpp \
	../placement/PlacementTypeBounds.h \
	../placement/PlacementTypeCount.cpp \
	../placement/PlacementTypeCount.h \
	../placement/PlacementTypeDirect.cpp \
	../placement/PlacementTypeDirect.h \
	../placement/PlacementTypeMask.cpp \
	../placement/PlacementTypeMask.h \
	../placement/PlacementTypeTankStart.cpp \
	../placement/PlacementTypeTankStart.h \
	../placement/PlacementTypeTree.cpp \
	../placement/PlacementTypeTree.h \
	../tank/Tank.cpp \
	../tank/Tank.h \
	../tank/TankAccessories.cpp \
	../tank/TankAccessories.h \
	../tank/TankAdmin.cpp \
	../tank/TankAdmin.h \
	../tank/TankAutoDefense.cpp \
	../tank/TankAutoDefense.h \
	../tank/TankAvatar.cpp \
	../tank/TankAvatar.h \
	../tank/TankBatteries.cpp \
	../tank/TankBatteries.h \
	../tank/TankCamera.cpp \
	../tank/TankCamera.h \
	../tank/TankColorGenerator.cpp \
	../tank/TankColorGenerator.h \
	../tank/TankContainer.cpp \
	../tank/TankContainer.h \
	../tank/TankDeadContainer.cpp \
	../tank/TankDeadContainer.h \
	../tank/TankDefinition.cpp \
	../tank/TankDefinition.h \
	../tank/TankLib.cpp \
	../tank/TankLib.h \
	../tank/TankMod.cpp \
	../tank/TankMod.h \
	../tank/TankModel.cpp \
	../tank/TankModel.h \
	../tank/TankModelContainer.cpp \
	../tank/TankModelContainer.h \
	../tank/TankModelStore.cpp \
	../tank/TankModelStore.h \
	../tank/TankPosition.cpp \
	../tank/TankPosition.h \
	../tank/TankScore.cpp \
	../tank/TankScore.h \
	../tank/TankSort.cpp \
	../tank/TankSort.h \
	../tank/TankState.cpp \
	../tank/TankState.h \
	../tank/TankTeamScore.cpp \
	../tank/TankTeamScore.h \
	../tank/TankType.cpp \
	../tank/TankType.h \
	../tank/TankTypes.cpp \
	../tank/TankTypes.h \
	../tank/TankWeapon.cpp \
	../tank/TankWeapon.h \
	../tankai/TankAI.cpp \
	../tankai/TankAI.h \
	../tankai/TankAIAdder.cpp \
	../tankai/TankAIAdder.h \
	../tankai/TankAIComputer.cpp \
	../tankai/TankAIComputer.h \
	../tankai/TankAIComputerAim.cpp \
	../tankai/TankAIComputerAim.h \
	../tankai/TankAIComputerBuyer.cpp \
	../tankai/TankAIComputerBuyer.h \
	../tankai/TankAIComputerTarget.cpp \
	../tankai/TankAIComputerTarget.h \
	../tankai/TankAINames.cpp \
	../tankai/TankAINames.h \
	../tankai/TankAIStore.cpp \
	../tankai/TankAIStore.h \
	../tankai/TankAIStrings.cpp \
	../tankai/TankAIStrings.h \
	../target/Target.cpp \
	../target/Target.h \
	../target/TargetContainer.cpp \
	../target/TargetContainer.h \
	../target/TargetDamageCalc.cpp \
	../target/TargetDamageCalc.h \
	../target/TargetDefinition.cpp \
	../target/TargetDefinition.h \
	../target/TargetGroupEntry.cpp \
	../target/TargetGroupEntry.h \
	../target/TargetLife.cpp \
	../target/TargetLife.h \
	../target/TargetParachute.cpp \
	../target/TargetParachute.h \
	../target/TargetRenderer.cpp \
	../target/TargetRenderer.h \
	../target/TargetShield.cpp \
	../target/TargetShield.h \
	../target/TargetSpace.cpp \
	../target/TargetSpace.h \
	../target/TargetSpaceContainment.cpp \
	../target/TargetSpaceContainment.h \
	../target/TargetState.cpp \
	../target/TargetState.h \
	../weapons/Accessory.cpp \
	../weapons/Accessory.h \
	../weapons/AccessoryCreateContext.cpp \
	../weapons/AccessoryCreateContext.h \
	../weapons/AccessoryPart.cpp \
	../weapons/AccessoryPart.h \
	../weapons/AccessoryStore.cpp \
	../weapons/AccessoryStore.h \
	../weapons/AutoDefense.cpp \
	../weapons/AutoDefense.h \
	../weapons/Battery.cpp \
	../weapons/Battery.h \
	../weapons/Economy.cpp \
	../weapons/Economy.h \
	../weapons/EconomyFreeMarket.cpp \
	../weapons/EconomyFreeMarket.h \
	../weapons/EconomyNone.cpp \
	../weapons/EconomyNone.h \
	../weapons/EconomyStore.cpp \
	../weapons/EconomyStore.h \
	../weapons/Parachute.cpp \
	../weapons/Parachute.h \
	../weapons/Shield.cpp \
	../weapons/Shield.h \
	../weapons/ShieldRound.cpp \
	../weapons/ShieldRound.h \
	../weapons/ShieldRoundMag.cpp \
	../weapons/ShieldRoundMag.h \
	../weapons/ShieldRoundReflective.cpp \
	../weapons/ShieldRoundReflective.h \
	../weapons/ShieldSquare.cpp \
	../weapons/ShieldSquare.h \
	../weapons/ShieldSquareReflective.cpp \
	../weapons/ShieldSquareReflective.h \
	../weapons/Weapon.cpp \
	../weapons/Weapon.h \
	../weapons/WeaponAddTarget.cpp \
	../weapons/WeaponAddTarget.h \
	../weapons/WeaponAimedOver.cpp \
	../weapons/WeaponAimedOver.h \
	../weapons/WeaponAimedUnder.cpp \
	../weapons/WeaponAimedUnder.h \
	../weapons/WeaponAnimation.cpp \
	../weapons/WeaponAnimation.h \
	../weapons/WeaponCenterPosition.cpp \
	../weapons/WeaponCenterPosition.h \
	../weapons/WeaponDelay.cpp \
	../weapons/WeaponDelay.h \
	../weapons/WeaponExplosion.cpp \
	../weapons/WeaponExplosion.h \
	../weapons/WeaponGiveAccessory.cpp \
	../weapons/WeaponGiveAccessory.h \
	../weapons/WeaponGiveLife.cpp \
	../weapons/WeaponGiveLife.h \
	../weapons/WeaponGiveLives.cpp \
	../weapons/WeaponGiveLives.h \
	../weapons/WeaponGiveMoney.cpp \
	../weapons/WeaponGiveMoney.h \
	../weapons/WeaponGivePower.cpp \
	../weapons/WeaponGivePower.h \
	../weapons/WeaponGiveScore.cpp \
	../weapons/WeaponGiveScore.h \
	../weapons/WeaponGiveWin.cpp \
	../weapons/WeaponGiveWin.h \
	../weapons/WeaponGroupSelect.cpp \
	../weapons/WeaponGroupSelect.h \
	../weapons/WeaponInvokeWeapon.cpp \
	../weapons/WeaponInvokeWeapon.h \
	../weapons/WeaponLaser.cpp \
	../weapons/WeaponLaser.h \
	../weapons/WeaponLeapFrog.cpp \
	../weapons/WeaponLeapFrog.h \
	../weapons/WeaponLightning.cpp \
	../weapons/WeaponLightning.h \
	../weapons/WeaponMirv.cpp \
	../weapons/WeaponMirv.h \
	../weapons/WeaponMoveTank.cpp \
	../weapons/WeaponMoveTank.h \
	../weapons/WeaponMulti.cpp \
	../weapons/WeaponMulti.h \
	../weapons/WeaponMuzzle.cpp \
	../weapons/WeaponMuzzle.h \
	../weapons/WeaponNapalm.cpp \
	../weapons/WeaponNapalm.h \
	../weapons/WeaponNull.cpp \
	../weapons/WeaponNull.h \
	../weapons/WeaponProjectile.cpp \
	../weapons/WeaponProjectile.h \
	../weapons/WeaponRandomChoice.cpp \
	../weapons/WeaponRandomChoice.h \
	../weapons/WeaponRedirect.cpp \
	../weapons/WeaponRedirect.h \
	../weapons/WeaponReference.cpp \
	../weapons/WeaponReference.h \
	../weapons/WeaponRepeat.cpp \
	../weapons/WeaponRepeat.h \
	../weapons/WeaponRoller.cpp \
	../weapons/WeaponRoller.h \
	../weapons/WeaponScatterDirection.cpp \
	../weapons/WeaponScatterDirection.h \
	../weapons/WeaponScatterPosition.cpp \
	../weapons/WeaponScatterPosition.h \
	../weapons/WeaponSelectPosition.cpp \
	../weapons/WeaponSelectPosition.h \
	../weapons/WeaponSkyFlash.cpp \
	../weapons/WeaponSkyFlash.h \
	../weapons/WeaponSound.cpp \
	../weapons/WeaponSound.h \
	../weapons/WeaponTankPosition.cpp \
	../weapons/WeaponTankPosition.h \
	../weapons/WeaponTankVelocity.cpp \
	../weapons/WeaponTankVelocity.h \
	../weapons/WeaponTeamAction.cpp \
	../weapons/WeaponTeamAction.h \
	../weapons/WeaponTeleport.cpp \
	../weapons/WeaponTeleport.h \
	../weapons/WeaponTranslate.cpp \
	../weapons/WeaponTranslate.h \
	../weapons/WeaponTypeAction.cpp \
	../weapons/WeaponTypeAction.h \
	../weapons/WeaponVelocity.cpp \
	../weapons/WeaponVelocity.h \
	../landscapemap/DeformLandscape.cpp \
	../landscapemap/DeformLandscape.h \
	../landscapemap/GroundMaps.cpp \
	../landscapemap/GroundMaps.h \
	../landscapemap/HeightMap.cpp \
	../landscapemap/HeightMap.h \
	../landscapemap/HeightMapLoader.cpp \
	../landscapemap/HeightMapLoader.h \
	../landscapemap/HeightMapModifier.cpp \
	../landscapemap/HeightMapModifier.h \
	../landscapemap/HeightMapSender.cpp \
	../landscapemap/HeightMapSender.h \
	../landscapemap/LandscapeMaps.cpp \
	../landscapemap/LandscapeMaps.h \
	../landscapemap/MovementMap.cpp \
	../landscapemap/MovementMap.h \
	../landscapemap/NapalmMap.cpp \
	../landscapemap/NapalmMap.h \
	../landscapemap/RoofMaps.cpp \
	../landscapemap/RoofMaps.h \
	../landscapemap/TargetGroups.cpp \
	../landscapemap/TargetGroups.h \
	../landscapemap/TargetGroupsGroupEntry.cpp \
	../landscapemap/TargetGroupsGroupEntry.h \
	../landscapemap/TargetGroupsSetEntry.cpp \
	../landscapemap/TargetGroupsSetEntry.h \
	../GLEXT/GLBitmap.cpp \
	../GLEXT/GLBitmap.h \
	../GLEXT/GLImage.cpp \
	../GLEXT/GLImage.h \
	../GLEXT/GLPng.cpp \
	../GLEXT/GLPng.h \
	../3dsparse/aseFile.lex.cpp \
	../3dsparse/aseFile.tab.cpp \
	../3dsparse/aseFile.tab.cpp.h \
	../3dsparse/ASEModelFactory.cpp \
	../3dsparse/ASEModelFactory.h \
	../3dsparse/Bone.cpp \
	../3dsparse/Bone.h \
	../3dsparse/Face.cpp \
	../3dsparse/Face.h \
	../3dsparse/Mesh.cpp \
	../3dsparse/Mesh.h \
	../3dsparse/MeshLOD.cpp \
	../3dsparse/MeshLOD.h \
	../3dsparse/MeshLODTri.cpp \
	../3dsparse/MeshLODTri.h \
	../3dsparse/MeshLODVector.cpp \
	../3dsparse/MeshLODVector.h \
	../3dsparse/Model.cpp \
	../3dsparse/Model.h \
	../3dsparse/ModelDefn.cpp \
	../3dsparse/ModelDefn.h \
	../3dsparse/ModelMaths.cpp \
	../3dsparse/ModelMaths.h \
	../3dsparse/ModelStore.cpp \
	../3dsparse/ModelStore.h \
	../3dsparse/MSModelFactory.cpp \
	../3dsparse/MSModelFactory.h \
	../3dsparse/TreeModelFactory.cpp \
	../3dsparse/TreeModelFactory.h \
	../3dsparse/Vertex.cpp \
	../3dsparse/Vertex.h \
	../movement/Boid.cpp \
	../movement/Boid.h \
	../movement/BoidsObstacle.cpp \
	../movement/BoidsObstacle.h \
	../movement/BoidVector.cpp \
	../movement/BoidVector.h \
	../movement/TargetMovement.cpp \
	../movement/TargetMovement.h \
	../movement/TargetMovementEntry.cpp \
	../movement/TargetMovementEntry.h \
	../movement/TargetMovementEntryBoids.cpp \
	../movement/TargetMovementEntryBoids.h \
	../movement/TargetMovementEntryShips.cpp \
	../movement/TargetMovementEntryShips.h \
	../movement/TargetMovementEntrySpline.cpp \
	../movement/TargetMovementEntrySpline.h

AM_CPPFLAGS = -I../porting -I.. -DS3D_SERVER=1 @SDL_CFLAGS@ @MYSQL_CFLAGS@
LDADD = @SDL_LIBS@ @MYSQL_LIBS@

